--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,32 +1,28 @@
-# .readthedocs.yaml
-# Read the Docs configuration file
-# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
-
-# Required
 version: 2
 
-# Set the OS, Python version and other tools you might need
+# Build using Read the Docs defaults, but you can also define Python dependencies here if needed
 build:
-  os: ubuntu-22.04
-  tools:
-    python: "3.12"
-    # You can also specify other tool versions:
-    # nodejs: "19"
-    # rust: "1.64"
-    # golang: "1.19"
+  image: latest
 
-# Build documentation in the "docs/" directory with Sphinx
+# You aren't using Sphinx or MkDocs, so skip these
 sphinx:
-  configuration: docs/conf.py
+  builder: html
 
-# Optionally build your docs in additional formats such as PDF and ePub
-# formats:
-#    - pdf
-#    - epub
+# Optionally skip installing MkDocs if you don't need it
+python:
+  install:
+    - method: pip
+      path: .
 
-# Optional but recommended, declare the Python requirements required
-# to build your documentation
-# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
+# Set the type of documentation you're serving, this can be custom static HTML files
+formats:
+  - html
+
+# Include all files in the directory, unless specified otherwise
+include:
+  - docs/
+
+# Specify the directory where your documentation lives, if it's not the root directory
+docs_dir: docs
+
+# Optionally define any environment variables if needed
