--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,7 +16,7 @@ python:
 
 # Set the type of documentation you're serving, this can be custom static HTML files
 formats:
-  - html
+  - "html"
 
 # Include all files in the directory, unless specified otherwise
 include:
