--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,24 +1,27 @@
+# Read the Docs configuration file for Sphinx projects
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+# Required
 version: 2
 
-# Build using Read the Docs defaults, but you can also define Python dependencies here if needed
+# Set the OS, Python version and other tools you might need
 build:
-  image: latest
-  os:
+  os: ubuntu-22.04
+  tools:
+    # python: "3.12"
+    # You can also specify other tool versions:
+    # nodejs: "20"
+    # rust: "1.70"
+    # golang: "1.20"
 
-# You aren't using Sphinx or MkDocs, so skip these
+# Build documentation in the "docs/" directory with Sphinx
 sphinx:
+  configuration: docs/conf.py
   builder: html
-
-# Optionally skip installing MkDocs if you don't need it
-python:
-  install:
-    - method: pip
-      path: .
-
-# Set the type of documentation you're serving, this can be custom static HTML files
-formats:
-  - htmlzip
-  - pdf
+  # You can configure Sphinx to use a different builder, for instance use the dirhtml builder for simpler URLs
+  # builder: "dirhtml"
+  # Fail on all warnings to avoid broken references
+  # fail_on_warning: true
 
 # Include all files in the directory, unless specified otherwise
 include:
@@ -27,4 +30,14 @@ include:
 # Specify the directory where your documentation lives, if it's not the root directory
 docs_dir: docs
 
-# Optionally define any environment variables if needed
+# Optionally build your docs in additional formats such as PDF and ePub
+# formats:
+#   - pdf
+#   - epub
+
+# Optional but recommended, declare the Python requirements required
+# to build your documentation
+# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+# python:
+#   install:
+#     - requirements: docs/requirements.txt
